2014-10-04  Trevor Saunders  <tsaunders@mozilla.com>

	* common/config/score/score-common.c: Remove.
	* config.gcc: Remove support for score-*.
	* config/score/constraints.md: Remove.
	* config/score/elf.h: Remove.
	* config/score/predicates.md: Remove.
	* config/score/score-conv.h: Remove.
	* config/score/score-generic.md: Remove.
	* config/score/score-modes.def: Remove.
	* config/score/score-protos.h: Remove.
	* config/score/score.c: Remove.
	* config/score/score.h: Remove.
	* config/score/score.md: Remove.
	* config/score/score.opt: Remove.
	* doc/md.texi: Don't document score-*.

2014-10-04  Trevor Saunders  <tsaunders@mozilla.com>
    
	PR pch/63429
	* genconditions.c: Directly include ggc.h before rtl.h.

2014-10-03  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-polymorphic-call.c
	(ipa_polymorphic_call_context::ipa_polymorphic_call_context): Fix
	code determining speculative type.
	(ipa_polymorphic_call_context::combine_with): Fix speculation merge.

2014-10-03  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* altivec.md (altivec_lvsl): New define_expand.
	(altivec_lvsl_direct): Rename define_insn from altivec_lvsl.
	(altivec_lvsr): New define_expand.
	(altivec_lvsr_direct): Rename define_insn from altivec_lvsr.
	* rs6000.c (rs6000_expand_builtin): Change to use
	altivec_lvs[lr]_direct; remove commented-out code.

2014-10-03  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* config/rs6000/rs6000-c.c (altivec_resolve_overloaded_builtin):
	Issue a warning message when vec_lvsl or vec_lvsr is used with a
	little endian target.

2014-10-03  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	* tree-pretty-print.c (dump_location): Make it extern. Dump also
	the column.
	* tree-pretty-print.h (dump_location): Declare.
	* gimple-pretty-print.c (dump_gimple_phi): Use dump_location.
	(pp_gimple_stmt_1): Likewise.
	(dump_implicit_edges): Likewise.
	* gimplify.c (gimplify_call_expr): Use LOCATION_FILE and
	LOCATION_LINE.


2014-10-03  David Malcolm  <dmalcolm@redhat.com>
