@@ -1,3 +1,7 @@
+2014-10-04  Jan Hubicka  <hubicka@ucw.cz>
+
+	* g++.dg/ipa/devirt-46.C: New testcase.
+
 2014-10-04  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
 
 	PR fortran/36534
